commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.conditionaltopbottomcriteriontype.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.conditionaltopbottomcriteriontype.yml
@@ -1,54 +1,41 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ConditionalTopBottomCriterionType:enum'
-    summary: |-
-      代表上述/低于平均条件格式类型的条件。
+### YamlMime:TSEnum
+name: Excel.ConditionalTopBottomCriterionType
+uid: excel!Excel.ConditionalTopBottomCriterionType:enum
+package: excel!
+fullName: Excel.ConditionalTopBottomCriterionType
+summary: >-
+  代表上述/低于平均条件格式类型的条件。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ConditionalTopBottomCriterionType
-    fullName: Excel.ConditionalTopBottomCriterionType
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ConditionalTopBottomCriterionType.bottomItems:member'
-      - 'excel!Excel.ConditionalTopBottomCriterionType.bottomPercent:member'
-      - 'excel!Excel.ConditionalTopBottomCriterionType.invalid:member'
-      - 'excel!Excel.ConditionalTopBottomCriterionType.topItems:member'
-      - 'excel!Excel.ConditionalTopBottomCriterionType.topPercent:member'
-  - uid: 'excel!Excel.ConditionalTopBottomCriterionType.bottomItems:member'
-    name: bottomItems
-    fullName: bottomItems
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"BottomItems"'
-  - uid: 'excel!Excel.ConditionalTopBottomCriterionType.bottomPercent:member'
-    name: bottomPercent
-    fullName: bottomPercent
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"BottomPercent"'
-  - uid: 'excel!Excel.ConditionalTopBottomCriterionType.invalid:member'
-    name: invalid
-    fullName: invalid
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Invalid"'
-  - uid: 'excel!Excel.ConditionalTopBottomCriterionType.topItems:member'
-    name: topItems
-    fullName: topItems
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"TopItems"'
-  - uid: 'excel!Excel.ConditionalTopBottomCriterionType.topPercent:member'
-    name: topPercent
-    fullName: topPercent
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"TopPercent"'
+
+  \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: bottomItems
+  uid: excel!Excel.ConditionalTopBottomCriterionType.bottomItems:member
+  package: excel!
+  summary: ''
+- name: bottomPercent
+  uid: excel!Excel.ConditionalTopBottomCriterionType.bottomPercent:member
+  package: excel!
+  summary: ''
+- name: invalid
+  uid: excel!Excel.ConditionalTopBottomCriterionType.invalid:member
+  package: excel!
+  summary: ''
+- name: topItems
+  uid: excel!Excel.ConditionalTopBottomCriterionType.topItems:member
+  package: excel!
+  summary: ''
+- name: topPercent
+  uid: excel!Excel.ConditionalTopBottomCriterionType.topPercent:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: 03d6a2bc237f6132d51b90396d48009b04748616
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49191827"
