--- a/docs/docs-ref-autogen/excel/excel/excel.datachangetype.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.datachangetype.yml
@@ -1,83 +1,49 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.DataChangeType:enum'
-    summary: '\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.DataChangeType
-    fullName: Excel.DataChangeType
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.DataChangeType.cellDeleted:member'
-      - 'excel!Excel.DataChangeType.cellInserted:member'
-      - 'excel!Excel.DataChangeType.columnDeleted:member'
-      - 'excel!Excel.DataChangeType.columnInserted:member'
-      - 'excel!Excel.DataChangeType.rangeEdited:member'
-      - 'excel!Excel.DataChangeType.rowDeleted:member'
-      - 'excel!Excel.DataChangeType.rowInserted:member'
-      - 'excel!Excel.DataChangeType.unknown:member'
-  - uid: 'excel!Excel.DataChangeType.cellDeleted:member'
-    summary: 'CellDeleted 表示通过删除单元格触发的数据更改事件。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: cellDeleted
-    fullName: cellDeleted
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"CellDeleted"'
-  - uid: 'excel!Excel.DataChangeType.cellInserted:member'
-    summary: 'CellInserted 表示数据更改事件是通过插入新单元格触发的。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: cellInserted
-    fullName: cellInserted
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"CellInserted"'
-  - uid: 'excel!Excel.DataChangeType.columnDeleted:member'
-    summary: 'ColumnDeleted 表示通过删除列触发的数据更改事件。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: columnDeleted
-    fullName: columnDeleted
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ColumnDeleted"'
-  - uid: 'excel!Excel.DataChangeType.columnInserted:member'
-    summary: 'ColumnInserted 表示数据更改事件是通过插入新列触发的。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: columnInserted
-    fullName: columnInserted
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ColumnInserted"'
-  - uid: 'excel!Excel.DataChangeType.rangeEdited:member'
-    summary: 'RangeEdited 表示数据更改事件是由正在编辑的区域触发的。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: rangeEdited
-    fullName: rangeEdited
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"RangeEdited"'
-  - uid: 'excel!Excel.DataChangeType.rowDeleted:member'
-    summary: 'RowDeleted 表示通过删除行来触发数据更改事件。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: rowDeleted
-    fullName: rowDeleted
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"RowDeleted"'
-  - uid: 'excel!Excel.DataChangeType.rowInserted:member'
-    summary: 'RowInserted 表示通过插入新行触发的数据更改事件。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: rowInserted
-    fullName: rowInserted
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"RowInserted"'
-  - uid: 'excel!Excel.DataChangeType.unknown:member'
-    summary: '"未知" 表示数据更改的类型不是列出的类型。 \[[API 集： ExcelApi 此值的名称是 ExcelApi 1.7 中的 "其他人](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)"\]'
-    name: unknown
-    fullName: unknown
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Unknown"'
+### YamlMime:TSEnum
+name: Excel.DataChangeType
+uid: excel!Excel.DataChangeType:enum
+package: excel!
+fullName: Excel.DataChangeType
+summary: '\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: cellDeleted
+  uid: excel!Excel.DataChangeType.cellDeleted:member
+  package: excel!
+  summary: CellDeleted 表示通过删除单元格触发的数据更改事件。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+- name: cellInserted
+  uid: excel!Excel.DataChangeType.cellInserted:member
+  package: excel!
+  summary: CellInserted 表示数据更改事件是通过插入新单元格触发的。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+- name: columnDeleted
+  uid: excel!Excel.DataChangeType.columnDeleted:member
+  package: excel!
+  summary: ColumnDeleted 表示通过删除列触发的数据更改事件。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+- name: columnInserted
+  uid: excel!Excel.DataChangeType.columnInserted:member
+  package: excel!
+  summary: ColumnInserted 表示数据更改事件是通过插入新列触发的。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+- name: rangeEdited
+  uid: excel!Excel.DataChangeType.rangeEdited:member
+  package: excel!
+  summary: RangeEdited 表示数据更改事件是由正在编辑的区域触发的。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+- name: rowDeleted
+  uid: excel!Excel.DataChangeType.rowDeleted:member
+  package: excel!
+  summary: RowDeleted 表示通过删除行来触发数据更改事件。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+- name: rowInserted
+  uid: excel!Excel.DataChangeType.rowInserted:member
+  package: excel!
+  summary: RowInserted 表示通过插入新行触发的数据更改事件。 \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+- name: unknown
+  uid: excel!Excel.DataChangeType.unknown:member
+  package: excel!
+  summary: "\"未知\" 表示数据更改的类型不是列出的类型。 \\[[API 集： ExcelApi 此值的名称是 ExcelApi 1.7 中的 \"其他人](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\"\\]"
+metadata:
+  ms.openlocfilehash: fedee0d93311e33e53869df05f298d1ae7a05ee2
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49191680"
