--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartformatstringloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartformatstringloadoptions.yml
@@ -1,46 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartFormatStringLoadOptions:interface'
-    summary: |-
-      表示与图表相关的对象中包含文本的子字符串，如 ChartTitle 对象、ChartAxisTitle 对象等。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartFormatStringLoadOptions
+uid: excel!Excel.Interfaces.ChartFormatStringLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartFormatStringLoadOptions
+summary: >-
+  表示与图表相关的对象中包含文本的子字符串，如 ChartTitle 对象、ChartAxisTitle 对象等。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartFormatStringLoadOptions
-    fullName: Excel.Interfaces.ChartFormatStringLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartFormatStringLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartFormatStringLoadOptions#font:member'
-  - uid: 'excel!Excel.Interfaces.ChartFormatStringLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartFormatStringLoadOptions#font:member'
-    summary: |-
-      代表 "图表字符" 对象的字体属性，如字体名称、字体大小、颜色等。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: font
-    fullName: font
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'font?: Excel.Interfaces.ChartFontLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartFontLoadOptions:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartFontLoadOptions:interface'
-    name: Excel.Interfaces.ChartFontLoadOptions
+  \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartFormatStringLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: font
+  uid: excel!Excel.Interfaces.ChartFormatStringLoadOptions#font:member
+  package: excel!
+  fullName: font
+  summary: >-
+    代表 "图表字符" 对象的字体属性，如字体名称、字体大小、颜色等。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'font?: Excel.Interfaces.ChartFontLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartFontLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 1371763760b304d6e808a6c7d8682bdc28745af1
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49191554"
