--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.cellproperties.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.cellproperties.yml
@@ -1,67 +1,71 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.CellProperties:interface'
-    summary: |-
-      表示 getCellProperties 的返回属性。
+### YamlMime:TSType
+name: Excel.CellProperties
+uid: excel!Excel.CellProperties:interface
+package: excel!
+fullName: Excel.CellProperties
+summary: >-
+  表示 getCellProperties 的返回属性。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.CellProperties
-    fullName: Excel.CellProperties
-    langs:
-      - typeScript
-    type: interface
-    extends:
-      - 'excel!Excel.SettableCellProperties:interface'
-    package: excel!
-    children:
-      - 'excel!Excel.CellProperties#address:member'
-      - 'excel!Excel.CellProperties#addressLocal:member'
-      - 'excel!Excel.CellProperties#hidden:member'
-  - uid: 'excel!Excel.CellProperties#address:member'
-    summary: |-
-      表示`address`属性。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: address
-    fullName: address
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'address?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.CellProperties#addressLocal:member'
-    summary: |-
-      表示`addressLocal`属性。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: address
+  uid: excel!Excel.CellProperties#address:member
+  package: excel!
+  fullName: address
+  summary: >-
+    表示`address`属性。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: addressLocal
-    fullName: addressLocal
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'addressLocal?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.CellProperties#hidden:member'
-    summary: |-
-      表示`hidden`属性。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: hidden
-    fullName: hidden
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'hidden?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.SettableCellProperties:interface'
-    name: SettableCellProperties
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'address?: string;'
+    return:
+      type: string
+- name: addressLocal
+  uid: excel!Excel.CellProperties#addressLocal:member
+  package: excel!
+  fullName: addressLocal
+  summary: >-
+    表示`addressLocal`属性。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'addressLocal?: string;'
+    return:
+      type: string
+- name: hidden
+  uid: excel!Excel.CellProperties#hidden:member
+  package: excel!
+  fullName: hidden
+  summary: >-
+    表示`hidden`属性。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'hidden?: boolean;'
+    return:
+      type: boolean
+extends: <xref uid="excel!Excel.SettableCellProperties:interface" />
+metadata:
+  ms.openlocfilehash: 03d7d8a1c44c8879d4ee32a40c422ad507e39fd3
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49191190"
