--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.cellpropertiesprotection.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.cellpropertiesprotection.yml
@@ -1,46 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.CellPropertiesProtection:interface'
-    summary: |-
-      表示 `format.protection` 的属性 `getCellProperties`<!-- -->, `getRowProperties`<!-- -->，和 `getColumnProperties` 或的 `format.protection` 输入参数 `setCellProperties`<!-- -->, `setRowProperties`<!-- -->，并 `setColumnProperties`<!-- -->.
+### YamlMime:TSType
+name: Excel.CellPropertiesProtection
+uid: excel!Excel.CellPropertiesProtection:interface
+package: excel!
+fullName: Excel.CellPropertiesProtection
+summary: >-
+  表示 `format.protection` 的属性 `getCellProperties`<!-- -->, `getRowProperties`<!-- -->，和 `getColumnProperties` 或的 `format.protection` 输入参数 `setCellProperties`<!-- -->, `setRowProperties`<!-- -->，并 `setColumnProperties`<!-- -->.
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.CellPropertiesProtection
-    fullName: Excel.CellPropertiesProtection
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.CellPropertiesProtection#formulaHidden:member'
-      - 'excel!Excel.CellPropertiesProtection#locked:member'
-  - uid: 'excel!Excel.CellPropertiesProtection#formulaHidden:member'
-    summary: |-
-      表示`format.protection.formulaHidden`属性。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formulaHidden
-    fullName: formulaHidden
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formulaHidden?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.CellPropertiesProtection#locked:member'
-    summary: |-
-      表示`format.protection.locked`属性。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: formulaHidden
+  uid: excel!Excel.CellPropertiesProtection#formulaHidden:member
+  package: excel!
+  fullName: formulaHidden
+  summary: >-
+    表示`format.protection.formulaHidden`属性。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: locked
-    fullName: locked
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'locked?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formulaHidden?: boolean;'
+    return:
+      type: boolean
+- name: locked
+  uid: excel!Excel.CellPropertiesProtection#locked:member
+  package: excel!
+  fullName: locked
+  summary: >-
+    表示`format.protection.locked`属性。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'locked?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: bf8950f71b349e33b4fbca0ed018e8d5c3b2bad5
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49191113"
