--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.documentdata.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.documentdata.yml
@@ -1,96 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.DocumentData:interface'
-    summary: 描述通过调用返回的数据的接口`document.toJSON()`<!-- -->.
-    name: Word.Interfaces.DocumentData
-    fullName: Word.Interfaces.DocumentData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.DocumentData#body:member'
-      - 'word!Word.Interfaces.DocumentData#contentControls:member'
-      - 'word!Word.Interfaces.DocumentData#saved:member'
-      - 'word!Word.Interfaces.DocumentData#sections:member'
-  - uid: 'word!Word.Interfaces.DocumentData#body:member'
-    summary: |-
-      获取文档的正文对象。 正文是不包括标头、页脚、脚注、文本框等的文本。 只读。
+### YamlMime:TSType
+name: Word.Interfaces.DocumentData
+uid: word!Word.Interfaces.DocumentData:interface
+package: word!
+fullName: Word.Interfaces.DocumentData
+summary: 描述通过调用返回的数据的接口 `document.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: body
+  uid: word!Word.Interfaces.DocumentData#body:member
+  package: word!
+  fullName: body
+  summary: >-
+    获取文档的正文对象。 正文是不包括标头、页脚、脚注、文本框等的文本。 只读。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: body
-    fullName: body
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'body?: Word.Interfaces.BodyData;'
-      return:
-        type:
-          - 'word!Word.Interfaces.BodyData:interface'
-  - uid: 'word!Word.Interfaces.DocumentData#contentControls:member'
-    summary: |-
-      获取文档中的内容控件对象的集合。 这包括文档正文、标头、页脚、文本框等中的内容控件。 只读。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: contentControls
-    fullName: contentControls
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'contentControls?: Word.Interfaces.ContentControlData[];'
-      return:
-        type:
-          - 'word!Word.Interfaces.DocumentData#contentControls~0:complex'
-  - uid: 'word!Word.Interfaces.DocumentData#saved:member'
-    summary: |-
-      指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'body?: Word.Interfaces.BodyData;'
+    return:
+      type: <xref uid="word!Word.Interfaces.BodyData:interface" />
+- name: contentControls
+  uid: word!Word.Interfaces.DocumentData#contentControls:member
+  package: word!
+  fullName: contentControls
+  summary: >-
+    获取文档中的内容控件对象的集合。 这包括文档正文、标头、页脚、文本框等中的内容控件。 只读。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: saved
-    fullName: saved
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'saved?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.DocumentData#sections:member'
-    summary: |-
-      获取文档中的节对象的集合。 只读。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: sections
-    fullName: sections
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'sections?: Word.Interfaces.SectionData[];'
-      return:
-        type:
-          - 'word!Word.Interfaces.DocumentData#sections~0:complex'
-references:
-  - uid: 'word!Word.Interfaces.BodyData:interface'
-    name: Word.Interfaces.BodyData
-  - uid: 'word!Word.Interfaces.DocumentData#contentControls~0:complex'
-    name: 'Word.Interfaces.ContentControlData[]'
-    fullName: 'Word.Interfaces.ContentControlData[]'
-    spec.typeScript:
-      - uid: 'word!Word.Interfaces.ContentControlData:interface'
-        name: Word.Interfaces.ContentControlData
-        fullName: Word.Interfaces.ContentControlData
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'word!Word.Interfaces.DocumentData#sections~0:complex'
-    name: 'Word.Interfaces.SectionData[]'
-    fullName: 'Word.Interfaces.SectionData[]'
-    spec.typeScript:
-      - uid: 'word!Word.Interfaces.SectionData:interface'
-        name: Word.Interfaces.SectionData
-        fullName: Word.Interfaces.SectionData
-      - name: '[]'
-        fullName: '[]'
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'contentControls?: Word.Interfaces.ContentControlData[];'
+    return:
+      type: <xref uid="word!Word.Interfaces.ContentControlData:interface" />[]
+- name: saved
+  uid: word!Word.Interfaces.DocumentData#saved:member
+  package: word!
+  fullName: saved
+  summary: >-
+    指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'saved?: boolean;'
+    return:
+      type: boolean
+- name: sections
+  uid: word!Word.Interfaces.DocumentData#sections:member
+  package: word!
+  fullName: sections
+  summary: >-
+    获取文档中的节对象的集合。 只读。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'sections?: Word.Interfaces.SectionData[];'
+    return:
+      type: <xref uid="word!Word.Interfaces.SectionData:interface" />[]
+metadata:
+  ms.openlocfilehash: 6ff59f95d714931e756cb9b7b822ee4c2e5edf95
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49192338"
