--- a/docs/docs-ref-autogen/excel/excel/excel.conditionalrangeborder.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.conditionalrangeborder.yml
@@ -1,235 +1,197 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ConditionalRangeBorder:class'
-    summary: |-
-      代表对象的边框。
+### YamlMime:TSType
+name: Excel.ConditionalRangeBorder
+uid: excel!Excel.ConditionalRangeBorder:class
+package: excel!
+fullName: Excel.ConditionalRangeBorder
+summary: >-
+  代表对象的边框。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ConditionalRangeBorder
-    fullName: Excel.ConditionalRangeBorder
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.ConditionalRangeBorder#color:member'
-      - 'excel!Excel.ConditionalRangeBorder#context:member'
-      - 'excel!Excel.ConditionalRangeBorder#load:member(1)'
-      - 'excel!Excel.ConditionalRangeBorder#load:member(2)'
-      - 'excel!Excel.ConditionalRangeBorder#load:member(3)'
-      - 'excel!Excel.ConditionalRangeBorder#set:member(1)'
-      - 'excel!Excel.ConditionalRangeBorder#set:member(2)'
-      - 'excel!Excel.ConditionalRangeBorder#sideIndex:member'
-      - 'excel!Excel.ConditionalRangeBorder#style:member'
-      - 'excel!Excel.ConditionalRangeBorder#toJSON:member(1)'
-  - uid: 'excel!Excel.ConditionalRangeBorder#color:member'
-    summary: |-
-      代表 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.ConditionalRangeBorder#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.ConditionalRangeBorder#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.ConditionalRangeBorderLoadOptions): Excel.ConditionalRangeBorder;'
-      return:
-        type:
-          - 'excel!Excel.ConditionalRangeBorder:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions:interface'
-  - uid: 'excel!Excel.ConditionalRangeBorder#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.ConditionalRangeBorder;'
-      return:
-        type:
-          - 'excel!Excel.ConditionalRangeBorder:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.ConditionalRangeBorder#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: |-
-        load(propertyNamesAndPaths?: {
+  \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: color
+  uid: excel!Excel.ConditionalRangeBorder#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    代表 RRGGBB 格式的边框线颜色的 HTML 颜色代码 \# (例如，"FFA500" ) 或作为命名的 HTML 颜色 (例如 "橙色" ) 。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color: string;'
+    return:
+      type: string
+- name: context
+  uid: excel!Excel.ConditionalRangeBorder#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: sideIndex
+  uid: excel!Excel.ConditionalRangeBorder#sideIndex:member
+  package: excel!
+  fullName: sideIndex
+  summary: >-
+    指示边框的特定边的常量值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly sideIndex: Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight";'
+    return:
+      type: <xref uid="excel!Excel.ConditionalRangeBorderIndex:enum" /> | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"
+- name: style
+  uid: excel!Excel.ConditionalRangeBorder#style:member
+  package: excel!
+  fullName: style
+  summary: >-
+    线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'style: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot";'
+    return:
+      type: <xref uid="excel!Excel.ConditionalRangeBorderLineStyle:enum" /> | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
+methods:
+- name: load(options)
+  uid: excel!Excel.ConditionalRangeBorder#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.ConditionalRangeBorderLoadOptions): Excel.ConditionalRangeBorder;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.ConditionalRangeBorder:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.ConditionalRangeBorder#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.ConditionalRangeBorder;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.ConditionalRangeBorder:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.ConditionalRangeBorder#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      load(propertyNamesAndPaths?: {
+                  select?: string;
+                  expand?: string;
+              }): Excel.ConditionalRangeBorder;
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: >-
+        {
                     select?: string;
                     expand?: string;
-                }): Excel.ConditionalRangeBorder;
-      return:
-        type:
-          - 'excel!Excel.ConditionalRangeBorder:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - |-
-              {
-                          select?: string;
-                          expand?: string;
-                      }
-  - uid: 'excel!Excel.ConditionalRangeBorder#set:member(1)'
-    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
-    remarks: |-
-      此方法具有以下附加签名：
+                }
+    return:
+      type: <xref uid="excel!Excel.ConditionalRangeBorder:class" />
+      description: ''
+- name: set(properties, options)
+  uid: excel!Excel.ConditionalRangeBorder#set:member(1)
+  package: excel!
+  fullName: set(properties, options)
+  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  remarks: >-
+    此方法具有以下附加签名：
 
-      `set(properties: Excel.ConditionalRangeBorder): void`
-    name: 'set(properties, options)'
-    fullName: 'set(properties, options)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Interfaces.ConditionalRangeBorderUpdateData, options?: OfficeExtension.UpdateOptions): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
-          type:
-            - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
-        - id: options
-          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
-          type:
-            - 'office!OfficeExtension.UpdateOptions:interface'
-  - uid: 'excel!Excel.ConditionalRangeBorder#set:member(2)'
-    summary: 基于现有加载的对象同时设置该对象的多个属性。
-    name: set(properties)
-    fullName: set(properties)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Excel.ConditionalRangeBorder): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: ''
-          type:
-            - 'excel!Excel.ConditionalRangeBorder:class'
-  - uid: 'excel!Excel.ConditionalRangeBorder#sideIndex:member'
-    summary: |-
-      指示边框的特定边的常量值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: sideIndex
-    fullName: sideIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly sideIndex: Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight";'
-      return:
-        type:
-          - 'excel!Excel.ConditionalRangeBorder#sideIndex~0:complex'
-  - uid: 'excel!Excel.ConditionalRangeBorder#style:member'
-    summary: |-
-      线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
-
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: style
-    fullName: style
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'style: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot";'
-      return:
-        type:
-          - 'excel!Excel.ConditionalRangeBorder#style~0:complex'
-  - uid: 'excel!Excel.ConditionalRangeBorder#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 ConditionalRangeBorder 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ConditionalRangeBorderData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.ConditionalRangeBorderData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeBorderData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.ConditionalRangeBorder:class'
-    name: Excel.ConditionalRangeBorder
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions:interface'
-    name: Excel.Interfaces.ConditionalRangeBorderLoadOptions
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
-    name: Interfaces.ConditionalRangeBorderUpdateData
-  - uid: 'office!OfficeExtension.UpdateOptions:interface'
-    name: OfficeExtension.UpdateOptions
-  - uid: 'excel!Excel.ConditionalRangeBorder#sideIndex~0:complex'
-    name: Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"
-    fullName: Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"
-    spec.typeScript:
-      - uid: 'excel!Excel.ConditionalRangeBorderIndex:enum'
-        name: Excel.ConditionalRangeBorderIndex
-        fullName: Excel.ConditionalRangeBorderIndex
-      - name: ' | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"'
-        fullName: ' | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"'
-  - uid: 'excel!Excel.ConditionalRangeBorder#style~0:complex'
-    name: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
-    fullName: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
-    spec.typeScript:
-      - uid: 'excel!Excel.ConditionalRangeBorderLineStyle:enum'
-        name: Excel.ConditionalRangeBorderLineStyle
-        fullName: Excel.ConditionalRangeBorderLineStyle
-      - name: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"'
-        fullName: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData:interface'
-    name: Excel.Interfaces.ConditionalRangeBorderData
+    `set(properties: Excel.ConditionalRangeBorder): void`
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Interfaces.ConditionalRangeBorderUpdateData, options?: OfficeExtension.UpdateOptions): void;'
+    parameters:
+    - id: properties
+      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface" />
+    - id: options
+      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
+    return:
+      type: void
+      description: ''
+- name: set(properties)
+  uid: excel!Excel.ConditionalRangeBorder#set:member(2)
+  package: excel!
+  fullName: set(properties)
+  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Excel.ConditionalRangeBorder): void;'
+    parameters:
+    - id: properties
+      description: ''
+      type: <xref uid="excel!Excel.ConditionalRangeBorder:class" />
+    return:
+      type: void
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.ConditionalRangeBorder#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始 ConditionalRangeBorder 对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `Excel.Interfaces.ConditionalRangeBorderData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.ConditionalRangeBorderData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeBorderData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 4d1aa17105d5fd01b7a55b662a3133af56743e87
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49191918"
