--- a/docs/docs-ref-autogen/excel_1_11/excel/excel.rangereference.yml
+++ b/docs/docs-ref-autogen/excel_1_11/excel/excel.rangereference.yml
@@ -1,30 +1,38 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.RangeReference:interface'
-    summary: |-
-      代表表单 SheetName 的字符串引用！A1： B5，或全局或本地命名区域。
+### YamlMime:TSType
+name: Excel.RangeReference
+uid: excel!Excel.RangeReference:interface
+package: excel!
+fullName: Excel.RangeReference
+summary: >-
+  代表表单 SheetName 的字符串引用！A1： B5，或全局或本地命名区域。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.RangeReference
-    fullName: Excel.RangeReference
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.RangeReference#address:member'
-  - uid: 'excel!Excel.RangeReference#address:member'
-    summary: |-
-      区域的地址;例如，"SheetName！A1： B5 '。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: address
-    fullName: address
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'address: string;'
-      return:
-        type:
-          - string
+  \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: address
+  uid: excel!Excel.RangeReference#address:member
+  package: excel!
+  fullName: address
+  summary: >-
+    区域的地址;例如，"SheetName！A1： B5 '。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'address: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: f1fc1cf7273b43a7513718968058c46c2ccaaf8e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49191414"
