--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.changedeventdetail.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.changedeventdetail.yml
@@ -1,97 +1,86 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChangedEventDetail:interface'
-    summary: |-
-      提供有关 WorksheetChangedEvent/TableChangedEvent 的详细信息
+### YamlMime:TSType
+name: Excel.ChangedEventDetail
+uid: excel!Excel.ChangedEventDetail:interface
+package: excel!
+fullName: Excel.ChangedEventDetail
+summary: >-
+  提供有关 WorksheetChangedEvent/TableChangedEvent 的详细信息
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ChangedEventDetail
-    fullName: Excel.ChangedEventDetail
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.ChangedEventDetail#valueAfter:member'
-      - 'excel!Excel.ChangedEventDetail#valueBefore:member'
-      - 'excel!Excel.ChangedEventDetail#valueTypeAfter:member'
-      - 'excel!Excel.ChangedEventDetail#valueTypeBefore:member'
-  - uid: 'excel!Excel.ChangedEventDetail#valueAfter:member'
-    summary: |-
-      表示更改之后的值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: valueAfter
-    fullName: valueAfter
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'valueAfter: any;'
-      return:
-        type:
-          - any
-  - uid: 'excel!Excel.ChangedEventDetail#valueBefore:member'
-    summary: |-
-      表示更改之前的值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: valueAfter
+  uid: excel!Excel.ChangedEventDetail#valueAfter:member
+  package: excel!
+  fullName: valueAfter
+  summary: >-
+    表示更改之后的值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: valueBefore
-    fullName: valueBefore
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'valueBefore: any;'
-      return:
-        type:
-          - any
-  - uid: 'excel!Excel.ChangedEventDetail#valueTypeAfter:member'
-    summary: |-
-      表示更改之后的值类型。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: valueTypeAfter
-    fullName: valueTypeAfter
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'valueTypeAfter: Excel.RangeValueType | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue";'
-      return:
-        type:
-          - 'excel!Excel.ChangedEventDetail#valueTypeAfter~0:complex'
-  - uid: 'excel!Excel.ChangedEventDetail#valueTypeBefore:member'
-    summary: |-
-      表示更改之前的值类型。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'valueAfter: any;'
+    return:
+      type: any
+- name: valueBefore
+  uid: excel!Excel.ChangedEventDetail#valueBefore:member
+  package: excel!
+  fullName: valueBefore
+  summary: >-
+    表示更改之前的值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: valueTypeBefore
-    fullName: valueTypeBefore
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'valueTypeBefore: Excel.RangeValueType | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue";'
-      return:
-        type:
-          - 'excel!Excel.ChangedEventDetail#valueTypeBefore~0:complex'
-references:
-  - uid: 'excel!Excel.ChangedEventDetail#valueTypeAfter~0:complex'
-    name: Excel.RangeValueType | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue"
-    fullName: Excel.RangeValueType | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue"
-    spec.typeScript:
-      - uid: 'excel!Excel.RangeValueType:enum'
-        name: Excel.RangeValueType
-        fullName: Excel.RangeValueType
-      - name: ' | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue"'
-        fullName: ' | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue"'
-  - uid: 'excel!Excel.ChangedEventDetail#valueTypeBefore~0:complex'
-    name: Excel.RangeValueType | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue"
-    fullName: Excel.RangeValueType | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue"
-    spec.typeScript:
-      - uid: 'excel!Excel.RangeValueType:enum'
-        name: Excel.RangeValueType
-        fullName: Excel.RangeValueType
-      - name: ' | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue"'
-        fullName: ' | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue"'
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'valueBefore: any;'
+    return:
+      type: any
+- name: valueTypeAfter
+  uid: excel!Excel.ChangedEventDetail#valueTypeAfter:member
+  package: excel!
+  fullName: valueTypeAfter
+  summary: >-
+    表示更改之后的值类型。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'valueTypeAfter: Excel.RangeValueType | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue";'
+    return:
+      type: <xref uid="excel!Excel.RangeValueType:enum" /> | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue"
+- name: valueTypeBefore
+  uid: excel!Excel.ChangedEventDetail#valueTypeBefore:member
+  package: excel!
+  fullName: valueTypeBefore
+  summary: >-
+    表示更改之前的值类型。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'valueTypeBefore: Excel.RangeValueType | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue";'
+    return:
+      type: <xref uid="excel!Excel.RangeValueType:enum" /> | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue"
+metadata:
+  ms.openlocfilehash: b6ff765351b42eca6d671df5f318839276b0329e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49191106"
