--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.searchoptionsloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.searchoptionsloadoptions.yml
@@ -1,139 +1,146 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.SearchOptionsLoadOptions:interface'
-    summary: |-
-      指定要包括在搜索操作中的选项。
+### YamlMime:TSType
+name: Word.Interfaces.SearchOptionsLoadOptions
+uid: word!Word.Interfaces.SearchOptionsLoadOptions:interface
+package: word!
+fullName: Word.Interfaces.SearchOptionsLoadOptions
+summary: >-
+  指定要包括在搜索操作中的选项。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: Word.Interfaces.SearchOptionsLoadOptions
-    fullName: Word.Interfaces.SearchOptionsLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.SearchOptionsLoadOptions#$all:member'
-      - 'word!Word.Interfaces.SearchOptionsLoadOptions#ignorePunct:member'
-      - 'word!Word.Interfaces.SearchOptionsLoadOptions#ignoreSpace:member'
-      - 'word!Word.Interfaces.SearchOptionsLoadOptions#matchCase:member'
-      - 'word!Word.Interfaces.SearchOptionsLoadOptions#matchPrefix:member'
-      - 'word!Word.Interfaces.SearchOptionsLoadOptions#matchSuffix:member'
-      - 'word!Word.Interfaces.SearchOptionsLoadOptions#matchWholeWord:member'
-      - 'word!Word.Interfaces.SearchOptionsLoadOptions#matchWildcards:member'
-  - uid: 'word!Word.Interfaces.SearchOptionsLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.SearchOptionsLoadOptions#ignorePunct:member'
-    summary: |-
-      获取或设置指示是否忽略单词之间的所有标点符号的值。对应于“查找和替换”对话框中的“忽略标点符号”复选框。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: ignorePunct
-    fullName: ignorePunct
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'ignorePunct?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.SearchOptionsLoadOptions#ignoreSpace:member'
-    summary: |-
-      获取或设置一个值，该值指示是否忽略单词之间的所有空格。 对应于 "查找和替换" 对话框中的 "忽略空白字符" 复选框。
+  \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: word!Word.Interfaces.SearchOptionsLoadOptions#$all:member
+  package: word!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: ignorePunct
+  uid: word!Word.Interfaces.SearchOptionsLoadOptions#ignorePunct:member
+  package: word!
+  fullName: ignorePunct
+  summary: >-
+    获取或设置指示是否忽略单词之间的所有标点符号的值。对应于“查找和替换”对话框中的“忽略标点符号”复选框。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: ignoreSpace
-    fullName: ignoreSpace
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'ignoreSpace?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.SearchOptionsLoadOptions#matchCase:member'
-    summary: |-
-      获取或设置指示是否执行区分大小写的搜索的值。 对应于 "查找和替换" 对话框中的 "区分大小写" 复选框。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: matchCase
-    fullName: matchCase
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'matchCase?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.SearchOptionsLoadOptions#matchPrefix:member'
-    summary: |-
-      获取或设置指示是否匹配以搜索字符串开头的单词。对应于“查找和替换”对话框中的“匹配前缀”复选框。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'ignorePunct?: boolean;'
+    return:
+      type: boolean
+- name: ignoreSpace
+  uid: word!Word.Interfaces.SearchOptionsLoadOptions#ignoreSpace:member
+  package: word!
+  fullName: ignoreSpace
+  summary: >-
+    获取或设置一个值，该值指示是否忽略单词之间的所有空格。 对应于 "查找和替换" 对话框中的 "忽略空白字符" 复选框。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: matchPrefix
-    fullName: matchPrefix
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'matchPrefix?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.SearchOptionsLoadOptions#matchSuffix:member'
-    summary: |-
-      获取或设置指示是否匹配以搜索字符串结尾的单词。对应于“查找和替换”对话框中的“匹配后缀”复选框。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: matchSuffix
-    fullName: matchSuffix
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'matchSuffix?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.SearchOptionsLoadOptions#matchWholeWord:member'
-    summary: |-
-      获取或设置指示是否只查找整个单词，而不查找长单词的一部分的值。对应于“查找和替换”对话框中的“全字匹配”复选框。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'ignoreSpace?: boolean;'
+    return:
+      type: boolean
+- name: matchCase
+  uid: word!Word.Interfaces.SearchOptionsLoadOptions#matchCase:member
+  package: word!
+  fullName: matchCase
+  summary: >-
+    获取或设置指示是否执行区分大小写的搜索的值。 对应于 "查找和替换" 对话框中的 "区分大小写" 复选框。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: matchWholeWord
-    fullName: matchWholeWord
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'matchWholeWord?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.SearchOptionsLoadOptions#matchWildcards:member'
-    summary: |-
-      获取或设置指示搜索是否使用特殊搜索操作符执行的值。对应于“查找和替换”对话框中的“使用通配符”复选框。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: matchWildcards
-    fullName: matchWildcards
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'matchWildcards?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'matchCase?: boolean;'
+    return:
+      type: boolean
+- name: matchPrefix
+  uid: word!Word.Interfaces.SearchOptionsLoadOptions#matchPrefix:member
+  package: word!
+  fullName: matchPrefix
+  summary: >-
+    获取或设置指示是否匹配以搜索字符串开头的单词。对应于“查找和替换”对话框中的“匹配前缀”复选框。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'matchPrefix?: boolean;'
+    return:
+      type: boolean
+- name: matchSuffix
+  uid: word!Word.Interfaces.SearchOptionsLoadOptions#matchSuffix:member
+  package: word!
+  fullName: matchSuffix
+  summary: >-
+    获取或设置指示是否匹配以搜索字符串结尾的单词。对应于“查找和替换”对话框中的“匹配后缀”复选框。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'matchSuffix?: boolean;'
+    return:
+      type: boolean
+- name: matchWholeWord
+  uid: word!Word.Interfaces.SearchOptionsLoadOptions#matchWholeWord:member
+  package: word!
+  fullName: matchWholeWord
+  summary: >-
+    获取或设置指示是否只查找整个单词，而不查找长单词的一部分的值。对应于“查找和替换”对话框中的“全字匹配”复选框。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'matchWholeWord?: boolean;'
+    return:
+      type: boolean
+- name: matchWildcards
+  uid: word!Word.Interfaces.SearchOptionsLoadOptions#matchWildcards:member
+  package: word!
+  fullName: matchWildcards
+  summary: >-
+    获取或设置指示搜索是否使用特殊搜索操作符执行的值。对应于“查找和替换”对话框中的“使用通配符”复选框。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'matchWildcards?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 962369d416f9ef7cf8f1e55be0bdd5f5501f1a5b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49192331"
