--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.tableborderupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.tableborderupdatedata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.TableBorderUpdateData:interface'
-    summary: '一个用于更新 TableBorder 对象上的数据的接口，可用于`tableBorder.set({ ... })`<!-- -->.'
-    name: Word.Interfaces.TableBorderUpdateData
-    fullName: Word.Interfaces.TableBorderUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
+### YamlMime:TSType
+name: Word.Interfaces.TableBorderUpdateData
+uid: word!Word.Interfaces.TableBorderUpdateData:interface
+package: word!
+fullName: Word.Interfaces.TableBorderUpdateData
+summary: 一个用于更新 TableBorder 对象上的数据的接口，可用于 `tableBorder.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 5c5305427a9db622b4c1d78d4800285c819bbc0d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49192317"
