commit translated contents

--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.threesignsset.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.threesignsset.yml
@@ -1,50 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ThreeSignsSet:interface'
-    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.ThreeSignsSet
-    fullName: Excel.ThreeSignsSet
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.ThreeSignsSet#greenCircle:member'
-      - 'excel!Excel.ThreeSignsSet#redDiamond:member'
-      - 'excel!Excel.ThreeSignsSet#yellowTriangle:member'
-  - uid: 'excel!Excel.ThreeSignsSet#greenCircle:member'
-    name: greenCircle
-    fullName: greenCircle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'greenCircle: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.ThreeSignsSet#redDiamond:member'
-    name: redDiamond
-    fullName: redDiamond
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'redDiamond: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.ThreeSignsSet#yellowTriangle:member'
-    name: yellowTriangle
-    fullName: yellowTriangle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'yellowTriangle: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-references:
-  - uid: 'excel!Excel.Icon:interface'
-    name: Icon
+### YamlMime:TSType
+name: Excel.ThreeSignsSet
+uid: excel!Excel.ThreeSignsSet:interface
+package: excel!
+fullName: Excel.ThreeSignsSet
+summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: greenCircle
+  uid: excel!Excel.ThreeSignsSet#greenCircle:member
+  package: excel!
+  fullName: greenCircle
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'greenCircle: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: redDiamond
+  uid: excel!Excel.ThreeSignsSet#redDiamond:member
+  package: excel!
+  fullName: redDiamond
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'redDiamond: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: yellowTriangle
+  uid: excel!Excel.ThreeSignsSet#yellowTriangle:member
+  package: excel!
+  fullName: yellowTriangle
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'yellowTriangle: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+metadata:
+  ms.openlocfilehash: 52ee2a361162def87370fe58e7849921f5953e86
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49197452"
