--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.settingcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.settingcollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.SettingCollectionUpdateData:interface'
-    summary: '一个用于更新 SettingCollection 对象上的数据的接口，可用于`settingCollection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.SettingCollectionUpdateData
-    fullName: Excel.Interfaces.SettingCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.SettingCollectionUpdateData#items:member'
-  - uid: 'excel!Excel.Interfaces.SettingCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.SettingData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.SettingCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.SettingCollectionUpdateData#items~0:complex'
-    name: 'Excel.Interfaces.SettingData[]'
-    fullName: 'Excel.Interfaces.SettingData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.SettingData:interface'
-        name: Excel.Interfaces.SettingData
-        fullName: Excel.Interfaces.SettingData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.SettingCollectionUpdateData
+uid: excel!Excel.Interfaces.SettingCollectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.SettingCollectionUpdateData
+summary: 一个用于更新 SettingCollection 对象上的数据的接口，可用于 `settingCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.SettingCollectionUpdateData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.SettingData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.SettingData:interface" />[]
+metadata:
+  ms.openlocfilehash: f1f65f418806fb46f61a68b37a0285dcfcea7724
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49197504"
