--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.chartaxiscategorytype.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.chartaxiscategorytype.yml
@@ -1,41 +1,33 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChartAxisCategoryType:enum'
-    summary: |-
-      指定分类轴的类型。
+### YamlMime:TSEnum
+name: Excel.ChartAxisCategoryType
+uid: excel!Excel.ChartAxisCategoryType:enum
+package: excel!
+fullName: Excel.ChartAxisCategoryType
+summary: >-
+  指定分类轴的类型。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ChartAxisCategoryType
-    fullName: Excel.ChartAxisCategoryType
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ChartAxisCategoryType.automatic:member'
-      - 'excel!Excel.ChartAxisCategoryType.dateAxis:member'
-      - 'excel!Excel.ChartAxisCategoryType.textAxis:member'
-  - uid: 'excel!Excel.ChartAxisCategoryType.automatic:member'
-    summary: Excel 控制轴类型。
-    name: automatic
-    fullName: automatic
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Automatic"'
-  - uid: 'excel!Excel.ChartAxisCategoryType.dateAxis:member'
-    summary: 轴按时间刻度组合数据。
-    name: dateAxis
-    fullName: dateAxis
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"DateAxis"'
-  - uid: 'excel!Excel.ChartAxisCategoryType.textAxis:member'
-    summary: 轴按一组任意类别组合数据。
-    name: textAxis
-    fullName: textAxis
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"TextAxis"'
+
+  \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: automatic
+  uid: excel!Excel.ChartAxisCategoryType.automatic:member
+  package: excel!
+  summary: Excel 控制轴类型。
+- name: dateAxis
+  uid: excel!Excel.ChartAxisCategoryType.dateAxis:member
+  package: excel!
+  summary: 轴按时间刻度组合数据。
+- name: textAxis
+  uid: excel!Excel.ChartAxisCategoryType.textAxis:member
+  package: excel!
+  summary: 轴按一组任意类别组合数据。
+metadata:
+  ms.openlocfilehash: c0ba3b0da923abf30d4ad99269224c9d9714889c
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49197308"
