--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendformatupdatedata.yml
@@ -1,30 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartLegendFormatUpdateData:interface'
-    summary: '一个用于更新 ChartLegendFormat 对象上的数据的接口，可用于`chartLegendFormat.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ChartLegendFormatUpdateData
-    fullName: Excel.Interfaces.ChartLegendFormatUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartLegendFormatUpdateData#font:member'
-  - uid: 'excel!Excel.Interfaces.ChartLegendFormatUpdateData#font:member'
-    summary: |-
-      表示图表图例的字体属性，例如字体名称、字体大小、颜色等。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartLegendFormatUpdateData
+uid: excel!Excel.Interfaces.ChartLegendFormatUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartLegendFormatUpdateData
+summary: 一个用于更新 ChartLegendFormat 对象上的数据的接口，可用于 `chartLegendFormat.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: font
+  uid: excel!Excel.Interfaces.ChartLegendFormatUpdateData#font:member
+  package: excel!
+  fullName: font
+  summary: >-
+    表示图表图例的字体属性，例如字体名称、字体大小、颜色等。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: font
-    fullName: font
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'font?: Excel.Interfaces.ChartFontUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartFontUpdateData:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartFontUpdateData:interface'
-    name: Excel.Interfaces.ChartFontUpdateData
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'font?: Excel.Interfaces.ChartFontUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartFontUpdateData:interface" />
+metadata:
+  ms.openlocfilehash: d7d429acf06b950866f9e00f42e9a67f2daa3bfb
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49197077"
