--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.nameditemdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.nameditemdata.yml
@@ -1,160 +1,146 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.NamedItemData:interface'
-    summary: 描述通过调用返回的数据的接口`namedItem.toJSON()`<!-- -->.
-    name: Excel.Interfaces.NamedItemData
-    fullName: Excel.Interfaces.NamedItemData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.NamedItemData#arrayValues:member'
-      - 'excel!Excel.Interfaces.NamedItemData#comment:member'
-      - 'excel!Excel.Interfaces.NamedItemData#formula:member'
-      - 'excel!Excel.Interfaces.NamedItemData#name:member'
-      - 'excel!Excel.Interfaces.NamedItemData#scope:member'
-      - 'excel!Excel.Interfaces.NamedItemData#type:member'
-      - 'excel!Excel.Interfaces.NamedItemData#value:member'
-      - 'excel!Excel.Interfaces.NamedItemData#visible:member'
-  - uid: 'excel!Excel.Interfaces.NamedItemData#arrayValues:member'
-    summary: |-
-      返回包含已命名项目的值和类型的对象。
+### YamlMime:TSType
+name: Excel.Interfaces.NamedItemData
+uid: excel!Excel.Interfaces.NamedItemData:interface
+package: excel!
+fullName: Excel.Interfaces.NamedItemData
+summary: 描述通过调用返回的数据的接口 `namedItem.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: arrayValues
+  uid: excel!Excel.Interfaces.NamedItemData#arrayValues:member
+  package: excel!
+  fullName: arrayValues
+  summary: >-
+    返回包含已命名项目的值和类型的对象。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: arrayValues
-    fullName: arrayValues
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'arrayValues?: Excel.Interfaces.NamedItemArrayValuesData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.NamedItemArrayValuesData:interface'
-  - uid: 'excel!Excel.Interfaces.NamedItemData#comment:member'
-    summary: |-
-      指定与此名称关联的注释。
 
-      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: comment
-    fullName: comment
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'comment?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.NamedItemData#formula:member'
-    summary: |-
-      已命名项的公式。 公式始终以等号 (=) 开头。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'arrayValues?: Excel.Interfaces.NamedItemArrayValuesData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.NamedItemArrayValuesData:interface" />
+- name: comment
+  uid: excel!Excel.Interfaces.NamedItemData#comment:member
+  package: excel!
+  fullName: comment
+  summary: >-
+    指定与此名称关联的注释。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formula
-    fullName: formula
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formula?: any;'
-      return:
-        type:
-          - any
-  - uid: 'excel!Excel.Interfaces.NamedItemData#name:member'
-    summary: |-
-      对象的名称。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.NamedItemData#scope:member'
-    summary: |-
-      指定名称的范围是工作簿还是特定工作表。 可能的值为：工作表、工作簿。
+    \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'comment?: string;'
+    return:
+      type: string
+- name: formula
+  uid: excel!Excel.Interfaces.NamedItemData#formula:member
+  package: excel!
+  fullName: formula
+  summary: >-
+    已命名项的公式。 公式始终以等号 (=) 开头。
 
-      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: scope
-    fullName: scope
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'scope?: Excel.NamedItemScope | "Worksheet" | "Workbook";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.NamedItemData#scope~0:complex'
-  - uid: 'excel!Excel.Interfaces.NamedItemData#type:member'
-    summary: |-
-      指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
-      \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: Excel.NamedItemType | "String" | "Integer" | "Double" | "Boolean" | "Range" | "Error" | "Array";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.NamedItemData#type~0:complex'
-  - uid: 'excel!Excel.Interfaces.NamedItemData#value:member'
-    summary: |-
-      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formula?: any;'
+    return:
+      type: any
+- name: name
+  uid: excel!Excel.Interfaces.NamedItemData#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    对象的名称。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: value
-    fullName: value
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'value?: any;'
-      return:
-        type:
-          - any
-  - uid: 'excel!Excel.Interfaces.NamedItemData#visible:member'
-    summary: |-
-      指定对象是否可见。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.NamedItemArrayValuesData:interface'
-    name: Excel.Interfaces.NamedItemArrayValuesData
-  - uid: 'excel!Excel.Interfaces.NamedItemData#scope~0:complex'
-    name: Excel.NamedItemScope | "Worksheet" | "Workbook"
-    fullName: Excel.NamedItemScope | "Worksheet" | "Workbook"
-    spec.typeScript:
-      - uid: 'excel!Excel.NamedItemScope:enum'
-        name: Excel.NamedItemScope
-        fullName: Excel.NamedItemScope
-      - name: ' | "Worksheet" | "Workbook"'
-        fullName: ' | "Worksheet" | "Workbook"'
-  - uid: 'excel!Excel.Interfaces.NamedItemData#type~0:complex'
-    name: Excel.NamedItemType | "String" | "Integer" | "Double" | "Boolean" | "Range" | "Error" | "Array"
-    fullName: Excel.NamedItemType | "String" | "Integer" | "Double" | "Boolean" | "Range" | "Error" | "Array"
-    spec.typeScript:
-      - uid: 'excel!Excel.NamedItemType:enum'
-        name: Excel.NamedItemType
-        fullName: Excel.NamedItemType
-      - name: ' | "String" | "Integer" | "Double" | "Boolean" | "Range" | "Error" | "Array"'
-        fullName: ' | "String" | "Integer" | "Double" | "Boolean" | "Range" | "Error" | "Array"'
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: string;'
+    return:
+      type: string
+- name: scope
+  uid: excel!Excel.Interfaces.NamedItemData#scope:member
+  package: excel!
+  fullName: scope
+  summary: >-
+    指定名称的范围是工作簿还是特定工作表。 可能的值为：工作表、工作簿。
+
+
+    \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'scope?: Excel.NamedItemScope | "Worksheet" | "Workbook";'
+    return:
+      type: <xref uid="excel!Excel.NamedItemScope:enum" /> | "Worksheet" | "Workbook"
+- name: type
+  uid: excel!Excel.Interfaces.NamedItemData#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
+
+
+    \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: Excel.NamedItemType | "String" | "Integer" | "Double" | "Boolean" | "Range" | "Error" | "Array";'
+    return:
+      type: <xref uid="excel!Excel.NamedItemType:enum" /> | "String" | "Integer" | "Double" | "Boolean" | "Range" | "Error" | "Array"
+- name: value
+  uid: excel!Excel.Interfaces.NamedItemData#value:member
+  package: excel!
+  fullName: value
+  summary: >-
+    表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'value?: any;'
+    return:
+      type: any
+- name: visible
+  uid: excel!Excel.Interfaces.NamedItemData#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    指定对象是否可见。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: ab1c2c9490441a70aa81f606e510f6acc4c40ae0
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49196783"
