--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartdatalabelformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartdatalabelformatloadoptions.yml
@@ -1,64 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions:interface'
-    summary: |-
-      封装图表数据表的格式属性。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartDataLabelFormatLoadOptions
+uid: excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartDataLabelFormatLoadOptions
+summary: >-
+  封装图表数据表的格式属性。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartDataLabelFormatLoadOptions
-    fullName: Excel.Interfaces.ChartDataLabelFormatLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions#border:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions#font:member'
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions#border:member'
-    summary: |-
-      表示边框格式，包括颜色、线条样式和粗细。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: border
-    fullName: border
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'border?: Excel.Interfaces.ChartBorderLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions#font:member'
-    summary: |-
-      表示图表数据标签的字体属性（字体名称、字体大小、颜色等）。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: border
+  uid: excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions#border:member
+  package: excel!
+  fullName: border
+  summary: >-
+    表示边框格式，包括颜色、线条样式和粗细。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: font
-    fullName: font
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'font?: Excel.Interfaces.ChartFontLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartFontLoadOptions:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
-    name: Excel.Interfaces.ChartBorderLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartFontLoadOptions:interface'
-    name: Excel.Interfaces.ChartFontLoadOptions
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'border?: Excel.Interfaces.ChartBorderLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartBorderLoadOptions:interface" />
+- name: font
+  uid: excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions#font:member
+  package: excel!
+  fullName: font
+  summary: >-
+    表示图表数据标签的字体属性（字体名称、字体大小、颜色等）。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'font?: Excel.Interfaces.ChartFontLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartFontLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 86d8f7d7cd52bfc27b31f9c8507329e76ebb6f3d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49196475"
