--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.charterrorbarsformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.charterrorbarsformatdata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartErrorBarsFormatData:interface'
-    summary: 描述通过调用返回的数据的接口`chartErrorBarsFormat.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartErrorBarsFormatData
-    fullName: Excel.Interfaces.ChartErrorBarsFormatData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ChartErrorBarsFormatData
+uid: excel!Excel.Interfaces.ChartErrorBarsFormatData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartErrorBarsFormatData
+summary: 描述通过调用返回的数据的接口 `chartErrorBarsFormat.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 3816b90617f18ea75d78e801664a309a76a93cb5
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49196447"
